manifests/spoke/spoke-catalog/infra/victoriametrics/controller.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: platform-observability
  labels:
    app.kubernetes.io/instance: vmop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.49.1
    helm.sh/chart: victoria-metrics-operator-0.38.0
  name: vmop-victoria-metrics-operator
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: webhook
    port: 9443
    targetPort: webhook
  selector:
    app.kubernetes.io/instance: vmop
    app.kubernetes.io/name: victoria-metrics-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmop-victoria-metrics-operator
  namespace: platform-observability
  labels:
    app.kubernetes.io/instance: vmop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.49.1
    helm.sh/chart: victoria-metrics-operator-0.38.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: vmop
      app.kubernetes.io/name: victoria-metrics-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vmop
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-metrics-operator
    spec:
      securityContext: {}
      serviceAccountName: vmop-victoria-metrics-operator
      containers:
      - name: operator
        image: victoriametrics/operator:v0.49.1
        imagePullPolicy: IfNotPresent
        args:
        - --zap-log-level=info
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --webhook.enable=true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: probe
          containerPort: 8081
          protocol: TCP
        - name: webhook
          containerPort: 9443
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: probe
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 15
          tcpSocket:
            port: probe
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        resources: {}
        securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: vmop-victoria-metrics-operator-validation
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: vmop-victoria-metrics-operator-admission
  labels:
    app.kubernetes.io/instance: vmop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.49.1
    helm.sh/chart: victoria-metrics-operator-0.38.0
webhooks:
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vlogs
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vlogs.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlogs
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmagent
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmagent.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmagents
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalert
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmalert.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalerts
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalertmanager
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmalertmanager.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalertmanagers
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalertmanagerconfig
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmalertmanagerconfig.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalertmanagerconfigs
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmauth
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmauth.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmauths
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmcluster
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmcluster.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmclusters
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmrule
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmrule.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmrules
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmsingle
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmsingle.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmsingles
- clientConfig:
    service:
      namespace: platform-observability
      name: vmop-victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmuser
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQUtibzlEQzdXUW1IWkt4RTRDOHFxYnN3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdPVEU1TURnME5qVTBXaGNOTXpZdwpPVEUyTURnME5qVTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1J6TEZLa3NzK1Q4Qkw0c0p6Z0Jvd292MUo0bms5b2tlRHEKc3FnQjB0Ykd4akczV1BHakVhdmswK2VJR29LUnpKSnZnSFhseGFnU2E2V2p0d1ByZE9KZ08yQzRiWEN3Vlc0NgpCZWpXMk10eHUzME [...]
  failurePolicy: Fail
  name: vmuser.victoriametrics.com
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmusers
